--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<div class="WikiWidget" style="height:600px;" data-wikiwidget="Vivarium"></div>
+	<div class="WikiWidget" data-wikiwidget="Vivarium" data-width="800" data-height="600"></div>
 </body>
 </html>
