--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,23 @@
 	<script src="mediawiki.js"></script>
 	<script src="../Vivarium.js"></script>
 	<link rel="stylesheet" href="../Vivarium.css">
+	<meta charset="utf8">
 </head>
 <body>
 
-<div class="WikiWidget" data-wikiwidget="Vivarium"></div>
+<!-- Version with all options in use -->
+<div class="WikiWidget"
+data-wikiwidget="Vivarium"
+data-autoplay="true"
+data-width="800"
+data-height="600"
+data-zoom="8"
+data-grid="true"
+data-cells="0,0 ; 0,1 ; 0,-1 ; 1,0 ; -1,1"
+></div>
+
+<!-- Minimal version -->
+<!-- <div class="WikiWidget" data-wikiwidget="Vivarium"> -->
 
 </body>
 </html>
